--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,18 +3,24 @@
     gap: 100px;
     list-style: none;
     margin-left: 700px;
+    text-decoration: none;
     .h1-ul-menu {
       margin-top: 37px;
+      color: black;
+      text-decoration: none;
     }
     
     .h1-ul-menu:hover{
-      color: #6e7d8e75;
+      color: #1b4f72;
       transition: color 0.2s ease;
     }
     .menu a {
       text-decoration: none;
-      color: #f5b041;
-    }
+        }
+
+        a {
+          text-decoration: none;
+        }
   }
 
   
