--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -138,11 +138,11 @@ display: block;
   }
   
   .li-top {
-    border: #687a8d solid 1px;
+    border: #687a8d80 solid 1px;
     border-radius: 10px;
     padding: 10px 30px;
     backdrop-filter: blur(20px);
-    background-color: #6e7d8e75;
+    background-color: #6e7d8e63;
   }
   
   .menu-main {
