--- a/main.css
+++ b/main.css
@@ -38,16 +38,19 @@
   background-image: url(/img/ad-img.png);
 }
 .ul-top .li-top {
-  border: #687a8d solid 1px;
-  border-radius: 10px;
-  padding: 10px 30px;
-  -webkit-backdrop-filter: blur(20px);
-          backdrop-filter: blur(20px);
-  background-color: rgba(110, 125, 142, 0.4588235294);
+  transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+  background-color: rgba(0, 0, 0, 0.027);
 }
-.ul-top .li-top .li-top:hover {
-  transition: background-color 0.3s ease, transform 0.3s ease;
-  transform: scale(1.2);
+.ul-top .li-top:hover {
+  background-color: rgba(0, 0, 0, 0.102);
+  transform: scale(1.1);
+}
+.ul-top .li-top .main-link {
+  text-decoration: none;
+  transition: margin cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+.ul-top .li-top .main-link:hover {
+  margin: 10px;
 }
 .ul-top .number {
   display: flex;
