--- a/sass/components/_top-apps.scss
+++ b/sass/components/_top-apps.scss
@@ -9,16 +9,26 @@
   list-style: none;
   background-image: url(/img/ad-img.png);
 
-  .li-top {
-    border: #687a8d solid 1px;
-    border-radius: 10px;
-    padding: 10px 30px;
-    backdrop-filter: blur(20px);
-    background-color: #6e7d8e75;
-    .li-top:hover {
-      transition: background-color 0.3s ease, transform 0.3s ease;
-      transform: scale(1.2);
-    }
+    .li-top{
+      transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+      background-color: rgba(0, 0, 0, 0.027);
+      
+      
+      &:hover{
+          background-color: rgba(0, 0, 0, 0.102);
+      transform: scale(1.1);
+      
+      }
+      
+      .main-link{
+          text-decoration: none;
+          transition: margin cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+      
+          &:hover{
+              margin: 10px;
+          }
+      }
+      
   }
 
   .number {
