--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -34,6 +34,14 @@ body {
     overflow: hidden;
   }
   
+.menu-item{
+
+}
+  
+.menu-link{
+
+}
+
   .modal {
     position: absolute;
     top: 50%;
@@ -80,8 +88,9 @@ body {
   }
   
   .li-top:hover {
-    transition: background-color 0.3s ease,
-      transform 0.3s ease;
+    margin: 10px;
+    transition: background-color 0.3s ease, margin cubic-bezier(0.075, 0.82, 0.165, 1) 1s,
+      transform 0.3s ease,;
       transform: scale(1.2);
   }
   
@@ -140,11 +149,21 @@ display: block;
   .li-top {
     border: #687a8d80 solid 1px;
     border-radius: 10px;
+      
     padding: 10px 30px;
     backdrop-filter: blur(20px);
     background-color: #6e7d8e63;
+    
   }
   
+.li-link{
+  transition: margin cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+
+  &:hover{
+      margin: 10px;
+  }
+}
+
   .menu-main {
     text-align: center;
   }
