--- a/main.scss
+++ b/main.scss
@@ -4,3 +4,4 @@
 @import "./sass/components/top-apps";
 @import "./sass/components/body";
 @import "./sass/components/other-apps";
+@import "./sass/components/animations";
