--- a/main.css
+++ b/main.css
@@ -235,4 +235,44 @@ body {
 
 html {
   scroll-behavior: smooth;
+}
+
+.carousel {
+  width: 60%;
+  overflow: hidden;
+  margin: auto;
+  position: relative;
+}
+
+.carousel-inner {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-item {
+  min-width: 100%;
+  box-sizing: border-box;
+}
+
+img {
+  width: 100%;
+  display: block;
+}
+
+.carousel-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0.5);
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.prev {
+  left: 10px;
+}
+
+.next {
+  right: 10px;
 }/*# sourceMappingURL=main.css.map */
