--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -33,14 +33,6 @@ body {
   .no-scroll {
     overflow: hidden;
   }
-  
-.menu-item{
-
-}
-  
-.menu-link{
-
-}
 
   .modal {
     position: absolute;
@@ -180,4 +172,11 @@ display: block;
   
   html {
     scroll-behavior: smooth;
+  }
+
+  .section-carousel img{
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    margin-left: 150px;
   }
