--- a/css-v1/_styles-v1.scss
+++ b/css-v1/_styles-v1.scss
@@ -42,12 +42,14 @@
      padding: 20px;
      text-align: center;
      transition: transform 0.3s ease, box-shadow 0.3s ease;
+     max-height: 600px;
+     max-width: 500px;
  }
 
  .app-card:hover {
      transform: translateY(-5px);
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-     background-color: #ff512f;
+     background-color: orangered;
      color: white;
      transition: 0.75s ease-in-out  ;
  }
@@ -59,7 +61,6 @@
 
  .app-card p {
      margin: 0 0 15px;
-     font-size: 1em;
      color: #555;
  }
 
@@ -446,4 +447,45 @@ body {
 
 li{
     list-style: none;
+}
+
+.log-in{
+    background-color: #707b7c;
+    color: white;
+    font-family: "Roboto", serif;
+    max-width: 500px;
+    height: 400px;
+    text-align: center;
+    border-radius: 20px;
+    justify-content: center;
+    align-self: center;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+.input{
+    border: none;
+    width: 300px;
+    height: 100px;
+    text-align: center;
+    border-radius: 20px;
+    background-color: #005bb5;
+    color: white;
+    font-size: 34px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.submitbutton{
+    border: none;
+    width: 100px;
+    height: 100px;
+    margin-top: 20px;
+    border-radius: 48px;
+}
+
+.svg-button{
+    width: 100px;
+    height: 100px;
+    fill: greenyellow;
+
 }
