--- a/main.scss
+++ b/main.scss
@@ -5,3 +5,4 @@
 @import "./sass/components/body";
 @import "./sass/components/other-apps";
 @import "./sass/components/animations";
+@import "./css-v1/styles-v1";
