--- a/css-v1/_styles-v1.scss
+++ b/css-v1/_styles-v1.scss
@@ -471,7 +471,7 @@ li{
     border-radius: 20px;
     background-color: #005bb5;
     color: white;
-    font-size: 34px;
+    font-size: 30px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -488,4 +488,8 @@ li{
     height: 100px;
     fill: greenyellow;
 
+}
+
+.enter-name-h1{
+    padding-top: 20px;
 }
