--- a/main.css
+++ b/main.css
@@ -337,7 +337,7 @@ header p {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   background-color: orangered;
   color: white;
-  transition: 0.75s ease-in-out;
+  transition: 0.25s ease-in-out;
 }
 
 .app-card h3 {
@@ -748,7 +748,7 @@ li {
   border-radius: 20px;
   background-color: #005bb5;
   color: white;
-  font-size: 34px;
+  font-size: 30px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
@@ -764,4 +764,8 @@ li {
   width: 100px;
   height: 100px;
   fill: greenyellow;
+}
+
+.enter-name-h1 {
+  padding-top: 20px;
 }/*# sourceMappingURL=main.css.map */
