--- a/main.css
+++ b/main.css
@@ -337,7 +337,7 @@ header p {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   background-color: orangered;
   color: white;
-  transition: 0.25s ease-in-out;
+  transition: 0.75s ease-in-out;
 }
 
 .app-card h3 {
@@ -727,9 +727,9 @@ li {
 }
 
 .log-in {
-  background-color: #707b7c;
-  color: white;
-  font-family: "Roboto", serif;
+  background-color: white;
+  color: black;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   max-width: 500px;
   height: 400px;
   text-align: center;
@@ -768,4 +768,17 @@ li {
 
 .enter-name-h1 {
   padding-top: 20px;
+  transition: ease-in-out 0.25s;
+}
+
+.enter-name-h1:hover {
+  transform: scale(1.2);
+  transition-duration: 400ms;
+}
+
+.first-section {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 24px;
+  text-align: center;
+  margin: 0 auto;
 }/*# sourceMappingURL=main.css.map */
