--- a/css-v1/_styles-v1.scss
+++ b/css-v1/_styles-v1.scss
@@ -35,23 +35,14 @@
      gap: 20px;
  }
 
- .app-card {
-     background: #fff;
-     border-radius: 10px;
-     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-     padding: 20px;
-     text-align: center;
-     transition: transform 0.3s ease, box-shadow 0.3s ease;
-     max-height: 600px;
-     max-width: 500px;
- }
+
 
  .app-card:hover {
      transform: translateY(-5px);
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-     background-color: orangered;
+     background-color: orange;
      color: white;
-     transition: 0.75s ease-in-out  ;
+     transition: 0.25s ease-in-out  ;
  }
 
  .app-card h3 {
@@ -506,3 +497,9 @@ li{
     text-align: center;
 margin: 0 auto;
 }
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
