--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -180,3 +180,18 @@ display: block;
     justify-content: center;
     margin-left: 150px;
   }
+
+  img{
+    margin-top: -10px;
+}
+
+ .app-card {
+     background: #fff;
+     border-radius: 10px;
+     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+     padding: 20px;
+     text-align: center;
+     transition: transform 0.3s ease, box-shadow 0.3s ease;
+     max-height: 600px;
+     max-width: 600px;
+ }
